css changes (overflow fix)

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -56,6 +56,7 @@
         justify-content: start;
         align-items: start;
         gap: 0vh;
+        overflow-x: hidden;
     }
 
     .about-me-left p {
