--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -102,8 +102,9 @@
 
 @media screen and (max-width: 600px) {
     .home-page {
-        height: 90vh;
+        height: 80vh;
         width: 100vw;
+        overflow-x: hidden;
     }
 
     .home-left-tag {
