--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -40,6 +40,7 @@ a {
         flex-direction: row;
         justify-content: center;
         align-items: center;
+        overflow-x: hidden;
     }
 
     .navbar-heading {
